package Structural.Composite.Interface;

public interface FileSystem {
    public void ls();
}
